adicao de comentarios nas classes

--- a/modulo1/ex10/Makefile
+++ b/modulo1/ex10/Makefile
@@ -1,8 +1,8 @@
-main: sumEvenValues.o main.o
-	gcc -Wall -g sumEvenValues.o main.o -o main
+main: sumEvens.o main.o
+	gcc -Wall -g sumEvens.o main.o -o main
 	
-sumEvenValues.o: sumEvenValues.c
-	gcc -Wall -g -c sumEvenValues.c -o sumEvenValues.o
+sumEvens.o: sumEvens.c
+	gcc -Wall -g -c sumEvens.c -o sumEvens.o
 
 main.o: main.c
 	gcc -Wall -g -c main.c -o main.o
@@ -11,4 +11,4 @@ run: main
 	./main
 
 clean:
-	rm -f sumEvenValues.o main.o main
+	rm -f sumEvens.o main.o main
