--- a/modulo1/ex09/Makefile
+++ b/modulo1/ex09/Makefile
@@ -1,5 +1,8 @@
-main: arraySortNoReps.o main.o
-	gcc -Wall -g arraySortNoReps.o main.o -o main
+main: arraySort.o arraySortNoReps.o main.o
+	gcc -Wall -g arraySort.o arraySortNoReps.o main.o -o main
+	
+arraySort.o: arraySort.c
+	gcc -Wall -g -c arraySort.c -o arraySort.o
 	
 arraySortNoReps.o: arraySortNoReps.c
 	gcc -Wall -g -c arraySortNoReps.c -o arraySortNoReps.o
