Modulo 2 - Exercicio 15 resolvido

--- a/modulo2/ex06/Makefile
+++ b/modulo2/ex06/Makefile
@@ -1,12 +1,9 @@
-main: contatBytes.o swap.o main.o
-	gcc -Wall -g contatBytes.o swap.o main.o -o main
+main: contatBytes.o  main.o
+	gcc -Wall -g contatBytes.o main.o -o main
 	
 contatBytes.o: contatBytes.s
 	gcc -Wall -g -c contatBytes.s -o contatBytes.o
 	
-swap.o: swap.s
-	gcc -Wall -g -c swap.s -o swap.o
-
 main.o: main.c
 	gcc -Wall -g -c main.c -o main.o
 
