--- a/modulo2/ex07/Makefile
+++ b/modulo2/ex07/Makefile
@@ -1,14 +1,8 @@
-main: contatBytes.o swap.o crossSum.o main.o
-	gcc -Wall -g contatBytes.o swap.o crossSum.o main.o -o main
+main: crossSum.o main.o
+	gcc -Wall -g crossSum.o main.o -o main
 	
 contatBytes.o: contatBytes.s
 	gcc -Wall -g -c contatBytes.s -o contatBytes.o
-	
-swap.o: swap.s
-	gcc -Wall -g -c swap.s -o swap.o
-	
-crossSum.o: crossSum.s
-	gcc -Wall -g -c crossSum.s -o crossSum.o	
 
 main.o: main.c
 	gcc -Wall -g -c main.c -o main.o
