--- a/modulo2/ex10/Makefile
+++ b/modulo2/ex10/Makefile
@@ -1,8 +1,8 @@
-main: sumIntValuesCarry.o main.o
-	gcc -Wall -g sumIntValuesCarry.o main.o -o main
+main: sumIntValues.o main.o
+	gcc -Wall -g sumIntValues.o main.o -o main
 	
-sumIntValuesCarry.o: sumIntValuesCarry.s
-	gcc -Wall -g -c sumIntValuesCarry.s -o sumIntValuesCarry.o
+sumIntValues.o: sumIntValues.s
+	gcc -Wall -g -c sumIntValues.s -o sumIntValues.o
 
 main.o: main.c
 	gcc -Wall -g -c main.c -o main.o
@@ -11,4 +11,4 @@ run: main
 	./main
 
 clean:
-	rm -f sumIntValuesCarry.o main.o main
+	rm -f sumIntValues.o main.o main
