Modulo 3 - Exercicio 14 resolvido

--- a/modulo3/ex14/Makefile
+++ b/modulo3/ex14/Makefile
@@ -1,8 +1,11 @@
-main: existencial.o main.o
-	gcc -Wall -g existencial.o main.o -o main
+main: existencial.o vecDif.o main.o
+	gcc -Wall -g existencial.o vecDif.o main.o -o main
 	
 existencial.o: existencial.s
 	gcc -Wall -g -c existencial.s -o existencial.o
+	
+vecDif.o: vecDif.s
+	gcc -Wall -g -c vecDif.s -o vecDif.o
 
 main.o: main.c
 	gcc -Wall -g -c main.c -o main.o
@@ -11,4 +14,4 @@ run: main
 	./main
 
 clean:
-	rm -f existencial.o main.o main
+	rm -f existencial.o vecDif.o main.o main
